src/objects/Callout_Log__c.object
<CustomObject>
    <fields>
        <fullName>Callout_Response__c</fullName>
        <label>Callout Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operation_Type__c</fullName>
        <label>Operation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Time__c</fullName>
        <label>Response Time</label>
        <type>DateTime</type>
    </fields>
    <label>Callout Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Parent External Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Callout Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>